--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,15 @@ body {
   cursor: pointer;
 }
 
+:root {
+  --animate-delay: 0.3s;
+}
+
+.card__item,
+.carousel__right {
+  --animate-delay: 0.3s;
+}
+
 header .header__nav {
   position: fixed;
   width: 100%;
@@ -392,7 +401,7 @@ header .header__nav--1 .navbar-nav .active::after {
 #course .course__content .course__right .form-control {
   border: 1px solid #0000001a;
   border-radius: 50px;
-  font-size: 13px;
+  font-size: 12px;
   padding-left: 40px;
   height: 40px;
 }
