--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,8 @@
 //Components
 @import "./sass/Components/button";
 @import "./sass/Components/social";
+@import "./sass/Components/animation";
+
 
 //Layouts
 @import "./sass/Layouts/header";
