--- a/css/style.css
+++ b/css/style.css
@@ -23,76 +23,62 @@ body {
 }
 
 .btn__callphone {
-  box-shadow: 0 0 0 1px #b61984 inset;
+  margin-right: 20px;
+  padding: 12px 25px 12px 25px;
+  border-radius: 50px;
+  box-shadow: 0 0 0 3em #b61984 inset;
+  color: #fff;
   background-color: #b61984;
-  border-radius: 25px;
+  transition: all 300ms ease;
   font-size: 13px;
-  padding: 12px 20px;
-  color: #f5f9fe !important;
-  margin-right: 15px;
+}
+
+.btn__callphone:hover {
+  box-shadow: 0 0 0 1px #b61984 inset;
+  color: #b61984;
+  background-color: white;
+  transition: all 300ms ease;
+}
+
+.btn__callphone .fa-phone-flip {
+  margin-right: 5px;
+}
+
+.btn {
+  margin-top: 30px;
+  margin-bottom: 73px;
+  padding: 12px 60px 12px 60px;
+  border-radius: 50px;
 }
 
 .btn__course {
-  box-shadow: 0 0 0 1px #b61984 inset;
+  box-shadow: 0 0 0 3em #b61984 inset;
+  color: #fff;
   background-color: #b61984;
-  border-radius: 50px;
+  transition: all 300ms ease;
   font-size: 13px;
-  padding: 12px 50px;
-  margin-top: 30px;
-  margin-bottom: 40px;
-  color: #f5f9fe !important;
-  border: none;
-  position: relative;
 }
 
-.btn__course::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  border-radius: 50px;
-  width: 100%;
-  height: 100%;
-  transform: scale(0);
-  transition: all 0.2s ease-in-out;
-  background-color: #fff;
+.btn__course:hover {
   box-shadow: 0 0 0 1px #b61984 inset;
-  color: #b61984 !important;
-}
-
-.btn__course:hover::after {
-  transform: scale(1);
+  color: #b61984;
+  background-color: white;
+  transition: all 300ms ease;
 }
 
 .btn__footer {
-  position: relative;
-  background-color: #fff;
-  box-shadow: 0 0 0 1px #b61984 inset;
-  border-radius: 50px;
-  font-size: 13px;
-  padding: 12px 50px;
-  margin-bottom: 100px;
+  box-shadow: 0 0 0 3em #fff inset;
   color: #191919;
-  border: none;
+  background-color: #fff;
+  transition: all 300ms ease;
+  font-size: 13px;
 }
 
-.btn__footer::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  border-radius: 50px;
-  width: 100%;
-  height: 100%;
-  background-color: #b61984;
-  color: #fff !important;
+.btn__footer:hover {
   box-shadow: 0 0 0 1px #fff inset;
-  transform: scale(0);
-  transition: all 0.3s ease;
-}
-
-.btn__footer:hover::after {
-  transform: scale(1);
+  color: #fff;
+  background-color: #b61984;
+  transition: all 300ms ease;
 }
 
 .social__header {
