--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -1,76 +1,61 @@
 .btn__callphone {
-    box-shadow: 0 0 0 1px $color-blue-1 inset;
+    margin-right: 20px;
+    padding: 12px 25px 12px 25px;
+    border-radius: 50px;
+    box-shadow: 0 0 0 3em $color-blue-1 inset;
+    color: $color-white-3;
     background-color: $color-blue-1;
-    border-radius: 25px;
+    transition: all 300ms ease;
     font-size: $fs-1;
-    padding: 12px 20px;
-    color: $color-white-1  !important;
-    margin-right: 15px;
+
+    &:hover {
+        box-shadow: 0 0 0 1px $color-blue-1 inset;
+        color: $color-blue-1;
+        background-color: white;
+        transition: all 300ms ease;
+    }
+
+    .fa-phone-flip{
+        margin-right: 5px;
+    }
 
 }
 
-.btn__course {
-    box-shadow: 0 0 0 1px $color-blue-1 inset;
-    background-color: $color-blue-1;
-    border-radius: 50px;
-    font-size: $fs-1;
-    padding: 12px 50px;
+.btn{
     margin-top: 30px;
-    margin-bottom: 40px;
-    color: $color-white-1  !important;
-    border: none;
-    position: relative;
+    margin-bottom: 73px;
+    padding: 12px 60px 12px 60px;
+    border-radius: 50px;
+}
 
-    &::after {
-        position: absolute;
-        top: 0;
-        left: 0;
-        content: "";
-        border-radius: 50px;
-        width: 100%;
-        height: 100%;
-        transform: scale(0);
-        transition: all 0.2s ease-in-out;
-        background-color: $color-white-3;
+.btn__course {
+    box-shadow: 0 0 0 3em $color-blue-1 inset;
+    color: $color-white-3;
+    background-color: $color-blue-1;
+    transition: all 300ms ease;
+    font-size: $fs-1;
+
+    &:hover {
         box-shadow: 0 0 0 1px $color-blue-1 inset;
-        color: $color-blue-1  !important;
-    }
-
-    &:hover::after {
-        transform: scale(1);
+        color: $color-blue-1;
+        background-color: white;
+        transition: all 300ms ease;
     }
 
 }
 
 .btn__footer {
-    position: relative;
-    background-color: $color-white-3;
-    box-shadow: 0 0 0 1px $color-blue-1 inset;
-    border-radius: 50px;
-    font-size: $fs-1;
-    padding: 12px 50px;
-    margin-bottom: 100px;
+    box-shadow: 0 0 0 3em $color-white-3 inset;
     color: $color-dark-5;
-    border: none;
-    
-    &::after {
-        position: absolute;
-        top: 0;
-        left: 0;
-        content: "";
-        border-radius: 50px;
-        width: 100%;
-        height: 100%;
-        background-color: $color-blue-1;
-        color: $color-white-3  !important;
+    background-color: $color-white-3;
+    transition: all 300ms ease;
+    font-size: $fs-1;
+
+    &:hover {
         box-shadow: 0 0 0 1px $color-white-3 inset;
-        transform: scale(0);
-        transition: all 0.3s ease;
-    }
-
-    &:hover::after {
-        transform: scale(1);
-
+        color: $color-white-3;
+        background-color: $color-blue-1;
+        transition: all 300ms ease;
     }
 
 }
