--- a/sass/Layouts/_footer.scss
+++ b/sass/Layouts/_footer.scss
@@ -1,5 +1,5 @@
 #footer {
-    background-image: url(../../images/footer_background.jpg);
+    background-image: url(../images/footer_background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
