--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@
 @import "./sass/Components/button";
 @import "./sass/Components/social";
 @import "./sass/Components/animation";
+@import "./sass/Components/_responsive";
 
 
 //Layouts
