--- a/sass/Layouts/_footer.scss
+++ b/sass/Layouts/_footer.scss
@@ -3,6 +3,13 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    padding-left: 150px;
+    padding-right: 150px;
+
+    @include responsive(lg) {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 
     .footer__content {
         padding: 100px 0;
@@ -55,6 +62,11 @@
         h5 {
             margin-bottom: 30px;
             font-weight: $fw-2;
+
+            @include responsive(xs) {
+                margin-bottom: 20px;
+                margin-top: 30px;
+            }
         }
 
         .footer__link {
