--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -1,16 +1,49 @@
 header {
     //Header main
+
     .header__nav {
+        padding-left: 150px;
+        padding-right: 150px;
         position: fixed;
         width: 100%;
         z-index: 999;
         transform: translateY(0);
         transition: transform 200ms ease;
-    
+
+        @include responsive(lg) {
+            position: relative;
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+
+        .navbar-toggler {
+            .navbar-toggler-icon {
+                @include responsive(lg) {
+                    position: absolute;
+                    top: 5px;
+                    left: 0;
+                    display: inline-block;
+                    width: 1.5em;
+                    height: 1.5em;
+                    vertical-align: middle;
+                    content: "";
+                    background: no-repeat center center;
+                    background-size: 100% 100%;
+                    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+                }
+            }
+        }
+
         .navbar-brand {
             .logo {
                 width: 80px;
                 height: auto;
+
+                @include responsive(lg) {
+                    height: 45px;
+                    width: 50px;
+                    margin-left: 40px;
+                }
             }
         }
 
@@ -69,6 +102,12 @@ header {
         }
     }
 
+    .navbar {
+        @include responsive(lg) {
+            padding: 0;
+        }
+    }
+
     .sticky {
         position: fixed;
         top: 0;
@@ -77,11 +116,16 @@ header {
         z-index: 999;
         transform: translateY(-100%);
 
+        @include responsive(lg) {
+            display: none;
+
+        }
+
     }
 
     // Header sub
 
-    .header__nav--1{
+    .header__nav--1 {
         background-color: $color-white-3;
         height: 50px;
         position: fixed;
@@ -91,13 +135,19 @@ header {
         z-index: 999;
         box-shadow: 0 0 10px 0 #cccccc80;
         transition: transform 200ms ease;
+
+        // @include responsive(lg) {
+        //     display: none;
+        // }
+
         .navbar-brand {
             display: none;
         }
 
-        .navbar{
+        .navbar {
             height: 50px;
         }
+
         .navbar-nav {
             .nav-item {
                 padding-right: 40px;
@@ -131,7 +181,5 @@ header {
 
             }
         }
-
     }
-
 }
