--- a/sass/Layouts/_ourteam.scss
+++ b/sass/Layouts/_ourteam.scss
@@ -2,13 +2,20 @@
     position: relative;
     background-color: #dcd1f3;
     padding-top: 40px;
+    padding-left: 150px;
+    padding-right: 150px;
 
-    .card__item {
-        margin-bottom: 30px;
-        border-radius: 10px;
-        z-index: 1;
-        // padding-right: 20px;
-        // padding-left: 20px;
+    @include responsive(lg) {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+.card__item {
+    margin-bottom: 30px;
+    border-radius: 10px;
+    z-index: 1;
+    // padding-right: 20px;
+    // padding-left: 20px;
 
     .card__image {
         border-radius: 10px;
