--- a/sass/Helpers/_mixin.scss
+++ b/sass/Helpers/_mixin.scss
@@ -4,6 +4,21 @@
     font-weight: $fw;
 }
 
-@mixin styleButton() {
-    
+@mixin styleButton() {}
+
+
+//Mixin responeisive
+
+@mixin responsive($canvas) {
+  @if $canvas == sm {
+   @media only screen and (max-width: $sm) { @content; } 
+  }
+  @else if $canvas == md {
+   @media only screen and (max-width: $md) { @content; } 
+  }
+  @else if $canvas == lg {
+   @media only screen and (max-width: $lg) { @content; } 
+  }
 }
+
+
