--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -62,11 +62,12 @@ $bd-2: 8px;
 
 //Mixin responeisive
 // Small screen / phone
-$sx: 575.98px;
+$xs: 576px;
 // Medium screen / tablet
-$sm: 767.98px;
+$sm: 768px;
 // Large screen / desktop
-$md: 991.98px;
+$md: 992px;
 // Extra large screen / wide desktop
-$lg: 1199.98px;
+$lg: 1200px;
+
 
