--- a/css/style.css
+++ b/css/style.css
@@ -142,12 +142,25 @@ header .header__nav .navbar-brand .logo {
   }
 }
 
-header .header__nav .navbar-nav .nav-item {
+header .header__nav .navbar {
+  padding: 0;
+}
+
+@media only screen and (max-width: 1200px) {
+  header .header__nav .navbar .navbar-collapse {
+    background-color: #fff;
+    width: 100%;
+    height: 100vh;
+    margin-top: -5px;
+  }
+}
+
+header .header__nav .navbar .navbar-nav .nav-item {
   padding-right: 40px;
   position: relative;
 }
 
-header .header__nav .navbar-nav .nav-item .nav-link {
+header .header__nav .navbar .navbar-nav .nav-item .nav-link {
   font-size: 13px;
   color: #181818;
   font-weight: 600;
@@ -156,22 +169,22 @@ header .header__nav .navbar-nav .nav-item .nav-link {
 }
 
 @media only screen and (max-width: 1200px) {
-  header .header__nav .navbar-nav .nav-item .nav-link {
+  header .header__nav .navbar .navbar-nav .nav-item .nav-link {
     padding-top: 0;
   }
 }
 
-header .header__nav .navbar-nav .nav-item:hover .nav-link {
+header .header__nav .navbar .navbar-nav .nav-item:hover .nav-link {
   color: #b61984 !important;
 }
 
-header .header__nav .navbar-nav .nav-item:hover::after {
+header .header__nav .navbar .navbar-nav .nav-item:hover::after {
   transform: scale(1);
   width: 10px;
   height: 10px;
 }
 
-header .header__nav .navbar-nav .nav-item::after {
+header .header__nav .navbar .navbar-nav .nav-item::after {
   background-color: #b61984;
   position: absolute;
   content: "";
@@ -185,28 +198,30 @@ header .header__nav .navbar-nav .nav-item::after {
 }
 
 @media only screen and (max-width: 1200px) {
-  header .header__nav .navbar-nav .nav-item::after {
+  header .header__nav .navbar .navbar-nav .nav-item::after {
     display: none;
   }
 }
 
-header .header__nav .navbar-nav .active .nav-link {
+header .header__nav .navbar .navbar-nav .active .nav-link {
   color: #181818 !important;
 }
 
-header .header__nav .navbar-nav .active::after {
+header .header__nav .navbar .navbar-nav .active::after {
   transform: scale(1);
 }
 
 @media only screen and (max-width: 1200px) {
-  header .header__nav .phone__navbar {
+  header .header__nav .navbar .phone__navbar {
     margin-bottom: 20px;
+    padding-left: 20px;
   }
 }
 
 @media only screen and (max-width: 1200px) {
-  header .navbar {
-    padding: 0;
+  header .header__nav .navbar .socials__navbar {
+    padding-left: 20px;
+    padding-bottom: 20px;
   }
 }
 
@@ -219,12 +234,6 @@ header .sticky {
   transform: translateY(-100%);
 }
 
-@media only screen and (max-width: 1200px) {
-  header .sticky {
-    display: none;
-  }
-}
-
 header .header__nav--1 {
   background-color: #fff;
   height: 50px;
@@ -235,12 +244,6 @@ header .header__nav--1 {
   z-index: 999;
   box-shadow: 0 0 10px 0 #cccccc80;
   transition: transform 200ms ease;
-}
-
-@media only screen and (max-width: 1200px) {
-  header .header__nav--1 {
-    position: relative;
-  }
 }
 
 header .header__nav--1 .navbar-brand {
@@ -260,6 +263,12 @@ header .header__nav--1 .navbar {
 header .header__nav--1 .navbar-nav .nav-item {
   padding-right: 40px;
   position: relative;
+}
+
+@media only screen and (max-width: 1200px) {
+  header .header__nav--1 .navbar-nav .nav-item {
+    padding-left: 20px;
+  }
 }
 
 header .header__nav--1 .navbar-nav .nav-item::after {
