--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -1,6 +1,6 @@
 header {
-    //Header main
 
+    //Header main
     .header__nav {
         padding-left: 150px;
         padding-right: 150px;
@@ -16,22 +16,6 @@ header {
             padding-right: 30px;
         }
 
-        // .navbar-toggler {
-        //     .navbar-toggler-icon {
-        //         @include responsive(lg) {
-        //             position: absolute;
-        //             top: 5px;
-        //             left: 0;
-        //             display: inline-block;
-        //             width: 2em;
-        //             height: 2em;
-        //             vertical-align: middle;
-        //             content: "";
-        //             background-size: 100% 100%;
-        //         }
-        //     }
-        // }
-
         .navbar-brand {
             .logo {
                 width: 80px;
@@ -44,78 +28,94 @@ header {
             }
         }
 
-        .navbar-nav {
-
-            .nav-item {
-                padding-right: 40px;
-                position: relative;
-
-                .nav-link {
-                    @include styleText($fs-1, $color-dark-1, $fw-2 );
-                    line-height: 60px;
-                    transition: all 0.2s;
-
-                    @include responsive(lg) {
-                        padding-top: 0;
-                    }
+        .navbar {
+            padding: 0;
+            .navbar-collapse {
+                @include responsive(lg) {
+                    background-color: $color-white-3;
+                    width: 100%;
+                    height: 100vh;
+                    margin-top: -5px;
                 }
+            }
 
-                &:hover {
+            .navbar-nav {
+
+                .nav-item {
+                    padding-right: 40px;
+                    position: relative;
 
                     .nav-link {
-                        color: $color-blue-1  !important;
+                        @include styleText($fs-1, $color-dark-1, $fw-2 );
+                        line-height: 60px;
+                        transition: all 0.2s;
+
+                        @include responsive(lg) {
+                            padding-top: 0;
+                        }
+                    }
+
+                    &:hover {
+
+                        .nav-link {
+                            color: $color-blue-1  !important;
+                        }
+
+                        &::after {
+
+                            transform: scale(1);
+                            width: 10px;
+                            height: 10px;
+                        }
                     }
 
                     &::after {
+                        background-color: $color-blue-1;
+                        position: absolute;
+                        content: "";
+                        left: 20px;
+                        width: 8px;
+                        height: 8px;
+                        border-radius: 50%;
+                        display: block;
+                        transform: scale(0);
+                        transition: all 0.5s;
 
+                        @include responsive(lg) {
+                            display: none;
+                        }
+                    }
+
+                }
+
+                .active {
+                    .nav-link {
+                        color: $color-dark-1  !important;
+                    }
+
+                    &::after {
                         transform: scale(1);
-                        width: 10px;
-                        height: 10px;
                     }
+
                 }
-
-                &::after {
-                    background-color: $color-blue-1;
-                    position: absolute;
-                    content: "";
-                    left: 20px;
-                    width: 8px;
-                    height: 8px;
-                    border-radius: 50%;
-                    display: block;
-                    transform: scale(0);
-                    transition: all 0.5s;
-
-                    @include responsive(lg) {
-                        display: none;
-                    }
-                }
-
             }
 
-            .active {
-                .nav-link {
-                    color: $color-dark-1  !important;
+            .phone__navbar {
+                @include responsive(lg) {
+                    margin-bottom: 20px;
+                    padding-left: 20px;
                 }
+            }
 
-                &::after {
-                    transform: scale(1);
+            .socials__navbar {
+                @include responsive(lg) {
+                    padding-left: 20px;
+                    padding-bottom: 20px;
+
                 }
-
             }
         }
 
-        .phone__navbar {
-            @include responsive(lg) {
-                margin-bottom: 20px;
-            }
-        }
-    }
-
-    .navbar {
-        @include responsive(lg) {
-            padding: 0;
-        }
     }
 
     .sticky {
@@ -125,11 +125,6 @@ header {
         width: 100%;
         z-index: 999;
         transform: translateY(-100%);
-
-        @include responsive(lg) {
-            display: none;
-
-        }
 
     }
 
@@ -145,11 +140,6 @@ header {
         z-index: 999;
         box-shadow: 0 0 10px 0 #cccccc80;
         transition: transform 200ms ease;
-
-        @include responsive(lg) {
-            position: relative;
-            
-        }
 
         .navbar-brand {
             display: none;
@@ -167,6 +157,11 @@ header {
             .nav-item {
                 padding-right: 40px;
                 position: relative;
+
+                @include responsive(lg) {
+                    padding-left: 20px;
+
+                }
 
                 &::after {
                     background-color: $color-blue-1;
