--- a/css/style.css
+++ b/css/style.css
@@ -395,10 +395,23 @@ header .header__nav--1 .navbar-nav .active::after {
   }
 }
 
+@media only screen and (max-width: 576px) {
+  #ourteam {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
 #ourteam .card__item {
   margin-bottom: 30px;
   border-radius: 10px;
   z-index: 1;
+}
+
+@media only screen and (max-width: 576px) {
+  #ourteam .card__item {
+    margin-bottom: 0px;
+  }
 }
 
 #ourteam .card__item .card__image {
@@ -472,6 +485,13 @@ header .header__nav--1 .navbar-nav .active::after {
   #course {
     padding-left: 30px;
     padding-right: 30px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  #course {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
