--- a/sass/Layouts/_ourteam.scss
+++ b/sass/Layouts/_ourteam.scss
@@ -9,11 +9,20 @@
         padding-left: 30px;
         padding-right: 30px;
     }
+    @include responsive(xs) {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
 
 .card__item {
     margin-bottom: 30px;
     border-radius: 10px;
     z-index: 1;
+
+    @include responsive(xs) {
+        margin-bottom: 0px;
+    }
     // padding-right: 20px;
     // padding-left: 20px;
 
